Closed
Bug 62432
Opened 25 years ago
Closed 25 years ago
Remove nsHTMLToTXTSinkStream from build
Categories
(Core :: DOM: Serializers, defect, P3)
Core
DOM: Serializers
Tracking
()
VERIFIED
FIXED
mozilla0.8
People
(Reporter: bratell, Assigned: mikepinkerton)
References
()
Details
Attachments
(2 files)
|
6.84 KB,
patch
|
Details | Diff | Splinter Review | |
|
6.33 KB,
patch
|
Details | Diff | Splinter Review |
nsHTMLToTXTSinkStream has moved to layout (nsPlaintextSerializer). It should be
removed from the tree and the build.
http://lxr.mozilla.org/seamonkey/search?string=nsHTMLToTXTSinkStream
gives the following tasks:
Remove IID from /xpcom/base/IIDS.h, line 1181
Remove reference from /htmlparser/src/MANIFEST, line 10
Remove reference from /htmlparser/src/Makefile.in, line 77 and 102
Remove reference from /htmlparser/src/makefile.win, line 54, 87 and 107
Remove reference from /htmlparser/src/nsParserModule.cpp, line 40, 188 and 361
Remove reference from /htmlparser/src/nsTextConverter.cpp, line 30
Remove reference from /widget/src/xpwidgets/nsXIFFormatConverter.cpp, line 37
Change references in /htmlparser/tests/outsinks/simplemail.html, line 4 and
/htmlparser/tests/outsinks/simplemail.out, line 3.
And when all that is done - step 2:
Remove /htmlparser/src/nsHTMLToTXTSinkStream.cpp and
/htmlparser/src/nsHTMLToTXTSinkStream.h from tree.
| Reporter | ||
Comment 1•25 years ago
|
||
http://lxr.mozilla.org/seamonkey/search?string=HTMLToTXT
was a better url. It turns out that there are a nsTextConverter that still uses
nsHTMLToTXTSinkStream. Is that converter still used? Then I guess there must be
something Mac specific too. (camelot?)
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.8
| Reporter | ||
Comment 2•25 years ago
|
||
nsTextConverter didn't seem to even be built so that's also a candidate for cvs
remove. I will attach a patch soon that removes all references to
nsHTMLToTXTSinkStream from the rest of the tree. Who is the best one to review
these changes? Akkana, can you help me with names if you can't do all yourself?
| Reporter | ||
Comment 3•25 years ago
|
||
Comment 4•25 years ago
|
||
Niceness!
Comment 5•25 years ago
|
||
Thanks! r=akkana -- the changes look good to me. We should also remove the
.cpp file from the mac build -- my mac is dead, but maybe Joe can do this for
us, and he and jst should be on the cc list anyway, in case there was a reason
this file wasn't removed earlier.
Comment 6•25 years ago
|
||
Coolness! :-)
Please hold off with this checkin tho if possible untill Vidur has landed his
humongous scanner buffer changes in the parser (ETA sometime this week), I know
this will conflict. If someone does check this in please inform Vidur about it.
And r=jst for what it's worth.
| Reporter | ||
Comment 7•25 years ago
|
||
I can wait. It will be interesting to see the impact of vidur's work and I don't
want to delay it. :-)
Comment 8•25 years ago
|
||
Vidurs changes went in today so feel free to land this ASAP.
Blocks: 63195
Comment 9•25 years ago
|
||
I'm still plowing through mail, so sorry for the delayed sr=vidur.
Comment 10•25 years ago
|
||
This fix breaks the mac: removing nsHTMLToTXTSinkStream.cpp from htmlparser.mcp
produces the following link error:
-----
Link Error : undefined 'nsHTMLContentSinkStream::nsHTMLContentSinkStream()'
(code)
Referenced from 'nsHTMLContentSinkStreamConstructor(nsISupports*,const nsID&
,void**)' in nsParserModule.cpp
-----
Joe, can you help?
Comment 11•25 years ago
|
||
Joe is out sick (and won't be back 'til after the holidays), and my Mac is
unreliable so I haven't been updating it regularly (would take a few hours to
pull a tree). Simon, could you help, or recommend a good person to ask?
| Reporter | ||
Comment 12•25 years ago
|
||
| Assignee | ||
Updated•25 years ago
|
Assignee: bratell → pinkerton
Status: ASSIGNED → NEW
| Assignee | ||
Comment 13•25 years ago
|
||
taking
| Assignee | ||
Comment 14•25 years ago
|
||
checked in.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Comment 15•25 years ago
|
||
Daniel please verify and mark VERIFIED-FIXED..thanks!
| Reporter | ||
Comment 16•25 years ago
|
||
Marking bug as verified since all platforms now builds without
nsHTMLToTXTSinkStream.cpp and nsHTMLToTXTSinkStream.h.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•