Bug 62432, remove nsHTMLToTXTSinkStream from build. r=akkana@netscape.com, sr=vidur@netscape.com